# bq

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  config.toml
bq/: Cargo.toml
bq/src/: config.toml  main.rs
engine/: Cargo.toml  config.toml
engine/src/: action.rs  channel.rs  config.rs  instance.rs  lib.rs
strategies/: Cargo.toml
strategies/benches/: atr.rs  rsi.rs
strategies/src/: lib.rs
strategies/src/atr/: backtest.rs  mod.rs
strategies/src/bollinger_bands/: backtest.rs  mod.rs
strategies/src/f4p/: backtest.rs  mod.rs
strategies/src/grid/: backtest.rs  mod.rs
strategies/src/macd/: mod.rs
strategies/src/rsi/: backtest.rs  mod.rs
strategies/src/sma/: backtest.rs  boring.rs  mod.rs
