[workspace]
members = [
    "strategies",
    "engine"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
binance-rs-async = "1.3.2"
ndarray = { version = "0.15.6" }
polars = { version = "0.30.0" }
serde_json = { version = "1.0.96" }
futures = { version = "0.3.28" }
ta = { version = "0.5.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.163" }
async-trait = { version = "0.1.68" }
rayon = { version = "1.7.0" }
criterion = {version = "0.5.1",features = ["stable"]}