[package]
name = "bq"
version = "0.0.1"
edition = "2021"
authors = ["Nekilc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
engine = { path = "../engine" }
clap = { version = "4.3.0", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.3.3", features = ["v4"] }