[package]
name = "engine"
version = "0.0.1"
edition = "2021"
authors = ["Nekilc"]

[[bin]]
name = "main"

[dependencies]
binance-rs-async = { workspace = true }
strategies = { path = "../strategies" }
tokio = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }
clap = { version = "4.3.0", features = ["derive"] }