[package]
name = "engine"
version = "0.0.1"
edition = "2021"
authors = ["Nekilc"]


[dependencies]
binance-rs-async = { workspace = true }
strategies = { path = "../strategies" }
tokio = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
uuid = { version = "1.3.3", features = ["v4"] }